# Humanoid-Robotics

./: .env  .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
.gemini/commands/: sp.auto.toml
.gemini/tmp/: feature_description.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1
backend/: .gitignore  README.md  ingest.py  installed.txt  pyproject.toml  requirements.txt  server.py
docs/01-physical-ai/: index.mdx  summary.mdx
docs/02-ros2-system/: index.mdx  summary.mdx
docs/03-digital-twins/: index.mdx  summary.mdx
docs/04-nvidia-isaac/: index.mdx  summary.mdx
docs/05-humanoid-dev/: index.mdx  summary.mdx
docs/06-vla-models/: index.mdx  summary.mdx
docs/07-conversational/: index.mdx  summary.mdx
docs/08-capstone/: index.mdx  summary.mdx
docs/09-hardware/: index.mdx  summary.mdx
specs/001-textbook-ui-update/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-textbook-ui-update/checklists/: requirements.md
specs/003-curriculum-expansion/: plan.md  spec.md
specs/004-folder-based-curriculum/: plan.md  spec.md  tasks.md
specs/005-rag-chatbot/: plan.md  spec.md  tasks.md
specs/006-python-rag-backend/: plan.md  spec.md  tasks.md
specs/007-litellm-rag-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: firebase.js
src/components/: AuthNavbarItem.tsx
src/css/: custom.css
src/pages/: auth.module.css  index.module.css  index.tsx  login.module.css  login.tsx  signup.tsx
src/theme/: Root.tsx
(+70 files in other folders)
